<resources>
    <!--region APP NAME-->
    <string name="app_name">CryptOficatioN</string>
    <!--endregion-->

    <!--region HOLDERS-->
    <string name="HOLDER_CRYPTO_ID">ABC1234</string>
    <string name="HOLDER_CRYPTO_NAME">ABCD</string>
    <string name="HOLDER_CRYPTO_SYMBOL">ABC</string>
    <string name="HOLDER_CRYPTO_CURRENT_PRICE">9999.99$</string>
    <string name="HOLDER_CRYPTO_MARKET_CAP_RANK">999</string>
    <string name="HOLDER_CRYPTO_HIGH_24H">9999.99$</string>
    <string name="HOLDER_CRYPTO_LOW_24H">9999.99$</string>
    <string name="HOLDER_CRYPTO_PRICE_CHANGE_PERCENTAGE_24H">99%</string>
    <string name="HOLDER_CRYPTO_PRICE_CHANGE_24H">99.99$</string>
    <string name="HOLDER_CRYPTO_CURRENT_PORTFOLIO">0$</string>
    <string name="HOLDER_ALERTS_PORTFOLIO_TOTAL">= XXXXX.XX$</string>
    <string name="HOLDER_ALERTS_PORTFOLIO_TOKEN_QUANTITY">Token Quantity</string>
    <string name="HOLDER_APP_VERSION">VX.X.X</string>
    <!--endregion-->

    <!--region STRINGS NORMAL-->
    <string name="NAME">Name</string>
    <string name="SYMBOL">Symbol</string>
    <string name="CURRENT_PRICE">Current price</string>
    <string name="PRICE">Price</string>
    <string name="MARKET_CAP_RANK">Market Cap Rank</string>
    <string name="HIGH_24H">High 24h</string>
    <string name="LOW_24H">Low 24h</string>
    <string name="PRICE_CHANGE_PERCENTAGE_24H">Price change 24h</string>
    <string name="CHANGE">Change</string>
    <string name="CLOSE">Close</string>
    <string name="TITLE">Title</string>
    <string name="CONTENT">Content</string>
    <string name="ADD_FAVORITE">Add as favorite</string>
    <string name="POWERED_BY">Powered by CoinGecko API</string>
    <string name="TOOLBAR">Toolbar</string>
    <string name="ZERO">0</string>
    <string name="CURRENCY_EURO">€</string>
    <string name="CURRENCY_DOLLAR">$</string>
    <string name="CURRENCY">Currency</string>
    <string name="NOTIFICATION_TIME">Notification time</string>
    <string name="VERSION">App version</string>
    <string name="NOTIFICATIONS">Notifications</string>
    <string name="COLOR_SCHEME">Color Scheme</string>
    <string name="ABOUT">About</string>
    <string name="MARKET">Market</string>
    <string name="EXIT">Exit</string>
    <string name="CONFIRMATION_EXIT">Are you sure you want to exit?</string>
    <string name="NO">No</string>
    <string name="YES">Yes</string>
    <string name="PREVIOUS_PAGE">Previous page</string>
    <string name="NEXT_PAGE">Next page</string>
    <string name="NO_DATA">No data</string>
    <string name="MARKET_NO_COINS_FOUND">No coins found with the query %s</string>
    <string name="NOTIFICATIONS_BODY_POSITIVE">%s is up by %s (%s) in the last 24 hours, currently at %s</string>
    <string name="NOTIFICATIONS_SHORT_BODY_POSITIVE">%s is up by %s in the last 24 hours</string>
    <string name="NOTIFICATIONS_BODY_NEGATIVE">%s is down by %s (%s) in the last 24 hours, currently at %s</string>
    <string name="NOTIFICATIONS_SHORT_BODY_NEGATIVE">%s is down by %s in the last 24 hours</string>
    <string name="ABOUT_INFO">Hi, my Name is Eric Barrero, and I\'m a student from Barcelona, Spain.\n
        This is my first "big" personal project, were I learnt how to implement some things I did not studied in school.
        It\'s not that big and complex, but for a rookie like me is a good starting point!\n\n
        If you want to see me on the social media tap on the icons below. Feel free to follow me!</string>
    <string name="LINKEDIN">LinkedIn</string>
    <string name="INSTAGRAM">Instagram</string>
    <string name="TWITTER">Twitter</string>
    <string name="CREDITS">LinkedIn, Instagram and Twitter icons made by Freepik from <a href="http://www.flaticon.com">www.flaticon.com</a>
        \n\nBell icon downloaded from <a href="https://icons8.com">www.icons8.com</a>
        \n\nData provided by <a href="http://www.coingecko.com">www.coingecko.com</a></string>
    <string name="CONTENT_CRYPTO_IMAGE">Icon of the Crypto coin</string>
    <string name="CONTENT_CRYPTO_STATUS">Icon indicating positive or negative price on the last 24 hours</string>
    <string name="CONTENT_ALERT_SETTINGS">Settings icon</string>
    <string name="CONTENT_BOTTOM_SHEET_SCROLL_ICON">Bottom Sheet scroll icon</string>
    <string name="CONTENT_CRYPTO_DETAIL_FAV_ICON">Crypto Detail favorite icon</string>
    <string name="FAV_ICON">Crypto Detail favorite icon</string>
    <string name="RECYCLERVIEW_EMPTY">No crypto has been added as favorites!\nHead over to the Markets tab and swipe a crypto to add it here</string>
    <string name="VIEWFLIPPER_EMPTY">No data loaded. Please, check your internet connection and pull down to refresh</string>
    <string name="LOADING_DATA">Loading data…</string>
    <string name="XIAOMI_CHECK_TITLE">Xiaomi Check</string>
    <string name="XIAOMI_CHECK_TEXT">We detected that you have a Xiaomi device (Xiaomi, Mi, Redmi, Poco, etc.) running MIUI.
        \n\nIf you want to receive daily notifications, you should activate \'Autostart\' permission and deactivate MIUI battery optimization.
        \n\nYou can find more info at the app info on the Settings menu.</string>
    <string name="XIAOMI_CHECK_BUTTON_TEXT">Go to app info</string>
    <string name="GO_TO_SETTINGS">Go to settings</string>
    <string name="INFO_NOTIFICATIONS">Xiaomi devices (Xiaomi, Mi, Redmi, Poco, etc.) running MIUI or others may have Battery Optimization
        active and/or application \'Autostart\' deactivated, causing troubles when trying to receive notifications.
        \n\nIn order to solve it, please, deactivate any kind of Battery Optimization and allow CryptOficatioN to autostart at the app info on the Settings menu.</string>
    <!--endregion-->

    <!--region STRINGS DOTS-->
    <string name="NAME_DOTS">Name:</string>
    <string name="SYMBOL_DOTS">Symbol:</string>
    <string name="CURRENT_PRICE_DOTS">Current price:</string>
    <string name="MARKET_CAP_RANK_DOTS">Market Cap Rank:</string>
    <string name="HIGH_24H_DOTS">High 24h:</string>
    <string name="LOW_24H_DOTS">Low 24h:</string>
    <string name="PRICE_CHANGE_PERCENTAGE_24H_DOTS">Price change 24h:</string>
    <string name="TITLE_DOTS">Title:</string>
    <string name="TOTAL_DOTS">Total:</string>
    <!--endregion-->

    <!--region NAV-->
    <string name="SEARCH">Search</string>
    <string name="FILTER">Filter</string>
    <string name="MARKETS">Markets</string>
    <string name="ALERTS">Alerts</string>
    <string name="SETTINGS">Settings</string>
    <!--endregion-->

    <!--region FILTERS-->
    <string name="FILTER_TYPE">Filter Type</string>
    <string name="FILTER_MARKET_CAP">Market Cap</string>
    <string name="FILTER_SYMBOL">Symbol</string>
    <string name="FILTER_NAME">Name</string>
    <string name="FILTER_PRICE">Price</string>
    <string name="FILTER_PERCENTAGE">Percentage</string>
    <string name="FILTER_ORDER">Filter Order</string>
    <string name="FILTER_ASCENDING">Ascending</string>
    <string name="FILTER_DESCENDING">Descending</string>
    <!--endregion-->

    <!--region ADMOB-->
    <string name="ADMOB_METADATA">ca-app-pub-3940256099942544~3347511713</string>
    <string name="ADMOB_BANNER_RECYCLERVIEW">ca-app-pub-3940256099942544/6300978111</string>
    <!--endregion-->

    <!--region SETTINGS-->
    <string name="PREFERENCES">userPrefs</string>

    <string name="SETTINGS_CURRENCY">Currency</string>
    <string name="SETTINGS_CURRENCY_SUMMARY">Change the displayed currency at the prices:</string>
    <string-array name="SETTINGS_CURRENCY_ENTRIES">
        <item>EUR</item>
        <item>USD</item>
    </string-array>
    <string-array name="SETTINGS_CURRENCY_VALUES">
        <item>eur</item>
        <item>usd</item>
    </string-array>
    <string name="SETTINGS_CURRENCY_VALUE_DEFAULT">usd</string>

    <string name="SETTINGS_FILTER_OPTION">Filter option</string>
    <string-array name="SETTINGS_FILTER_OPTION_ENTRIES">
        <item>Market Cap</item>
        <item>Symbol</item>
        <item>Name</item>
        <item>Price</item>
        <item>Percentage</item>
    </string-array>
    <string-array name="SETTINGS_FILTER_OPTION_VALUES">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="SETTINGS_FILTER_OPTION_VALUE_DEFAULT">0</string>

    <string name="SETTINGS_FILTER_ORDER">Filter order</string>
    <string-array name="SETTINGS_FILTER_ORDER_ENTRIES">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string-array name="SETTINGS_FILTER_ORDER_VALUES">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="SETTINGS_FILTER_ORDER_VALUE_DEFAULT">0</string>

    <string name="SETTINGS_ITEMS_PAGE">Items per page</string>
    <string-array name="SETTINGS_ITEMS_PAGE_ENTRIES_VALUES">
        <item>50</item>
        <item>75</item>
        <item>100</item>
        <item>125</item>
        <item>150</item>
        <item>175</item>
        <item>200</item>
    </string-array>
    <string name="SETTINGS_ITEMS_PAGE_VALUE_DEFAULT">100</string>

    <string name="SETTINGS_SCROLL_ON_PAGE_CHANGED">Scroll on page changed</string>
    <string name="SETTINGS_SCROLL_ON_PAGE_CHANGED_SUMMARY">Scroll list to top when going to next page and scroll list to bottom when going to previous page</string>

    <string name="SETTINGS_INFO_NOTIFICATIONS">Info about notifications</string>

    <string name="SETTINGS_DARK_MODE">Dark Mode</string>
    <string name="SETTINGS_DARK_MODE_SUMMARY">Enable dark mode</string>

    <string name="SETTINGS_ABOUT">About Me</string>
    <string name="SETTINGS_CREDITS">Credits</string>
    <!--endregion-->
</resources>