<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDialogAboutTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/SETTINGS_ABOUT"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDialogAboutContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogAboutContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:padding="20sp"
        android:text="@string/ABOUT_INFO"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/llDialogAboutSocialMedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogAboutTitle"
        tools:targetApi="o" />

    <LinearLayout
        android:id="@+id/llDialogAboutSocialMedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogAboutContent">

        <ImageView
            android:id="@+id/ivDialogAboutLinkedIn"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="2"
            android:contentDescription="@string/LINKEDIN"
            android:padding="10sp"
            android:src="@drawable/ic_icon_linkedin" />

        <ImageView
            android:id="@+id/ivDialogAboutInstagram"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="2"
            android:contentDescription="@string/INSTAGRAM"
            android:padding="10sp"
            android:src="@drawable/ic_icon_instagram" />

        <ImageView
            android:id="@+id/ivDialogAboutTwitter"
            android:layout_width="wrap_content"
            android:layout_height="75sp"
            android:layout_weight="2"
            android:contentDescription="@string/TWITTER"
            android:padding="10sp"
            android:src="@drawable/ic_icon_twitter" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>