<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvDialogInfoNotificationsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10sp"
        android:text="@string/SETTINGS_INFO_NOTIFICATIONS"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDialogInfoNotificationsContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogInfoNotificationsContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:padding="20sp"
        android:text="@string/INFO_NOTIFICATIONS"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/btnDialogInfoNotificationsGoToAppInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogInfoNotificationsTitle"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btnDialogInfoNotificationsGoToAppInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/XIAOMI_CHECK_BUTTON_TEXT"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogInfoNotificationsContent" />

</androidx.constraintlayout.widget.ConstraintLayout>