<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayoutCrypto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <ImageView
        android:id="@+id/ivAdapterCryptoIcon"
        android:layout_width="0dp"
        android:layout_height="35sp"
        android:contentDescription="@string/CONTENT_CRYPTO_IMAGE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvAdapterCryptoSymbol"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvAdapterCryptoSymbol"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:gravity="center_vertical"
        android:textColor="@color/text"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/llAdapterCryptoNamePrice"
        app:layout_constraintHorizontal_weight="10"
        app:layout_constraintStart_toEndOf="@id/ivAdapterCryptoIcon"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/HOLDER_CRYPTO_NAME" />

    <LinearLayout
        android:id="@+id/llAdapterCryptoNamePrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/llAdapterCryptoPercentage"
        app:layout_constraintHorizontal_weight="20"
        app:layout_constraintStart_toEndOf="@id/tvAdapterCryptoSymbol"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvAdapterCryptoName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:gravity="start|center_vertical"
            android:textColor="@color/text"
            android:textSize="13sp"
            tools:text="@string/HOLDER_CRYPTO_SYMBOL" />

        <TextView
            android:id="@+id/tvAdapterCryptoPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="2dp"
            android:gravity="center_vertical"
            android:textColor="@color/text"
            android:textSize="15sp"
            tools:text="@string/HOLDER_CRYPTO_NAME" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llAdapterCryptoPercentage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="8"
        app:layout_constraintStart_toEndOf="@id/llAdapterCryptoNamePrice"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivAdapterCryptoIconPriceChange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:contentDescription="@string/CONTENT_CRYPTO_STATUS"
            tools:src="@drawable/ic_arrow_drop_up" />

        <TextView
            android:id="@+id/tvAdapterCryptoTextPriceChange"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textColor="@color/text"
            android:textSize="13sp"
            tools:text="@string/HOLDER_CRYPTO_PRICE_CHANGE_PERCENTAGE_24H" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>